# sd-mcp-server

./: README.md  check_categories.py  debug_database_init.py  discord_bot.py  gui_tester.py  health_check.py  mcp_http_server.py  pyproject.toml  start_discord_bot.py  start_gui_tester.bat  start_gui_tester.py  start_gui_tester.sh
config/: chevereto_config.py
docs/: ARCHITECTURE.md  CHEVERETO_INTEGRATION_GUIDE.md  CONTENT_SYSTEM.md  DATABASE.md  DEVELOPER.md  DISCORD.md  ENTRY_FLOW.md  LORA_SYSTEM.md  README.md  README_SD_WEB.md  SETUP.md  discord_bot.py  nudenet_threshold_configuration.md
modules/config/: __init__.py  mcp_config.py
modules/llm/: __init__.py  base_provider.py  claude_provider.py  discord_conversation.py  gemini_provider.py  llm_database.py  llm_manager.py  lmstudio_provider.py  openai_provider.py  prompt_enhancement.py
modules/stable_diffusion/: __init__.py  auth_manager.py  chevereto_client.py  content_db.py  content_guide_tools.py  content_mapping.db  core_tools.py  discord_integration.py  enhanced_lora_parser.py  initial_mappings.py  lazy_tool_loader.py  lora_database.db  lora_manager.py  lora_tools.py  model_tools.py  models.py  queue_manager.py  queue_tools.py  sd_client.py  upload_tools.py  uploader.py
scripts/: init_databases.py
scripts/mcp_servers/: sd_mcp_server.py
utils/: check_dependencies.py
